# akkord

./: .gitignore  Cargo.toml  Dockerfile  README.md  compose.yaml
src/: error.rs  main.rs  templates.rs
src/models/: chord.rs  components.rs  interval.rs  mod.rs
src/services/: identify.rs  mod.rs  naming.rs  processing.rs
src/web/: mod.rs  routes_identify.rs  validate.rs
static/: script.js  site.webmanifest  styles.css
static/images/: site.webmanifest
templates/: about.html  base.html  identifier.html  index.html  result.html
tests/: quick_dev.rs
