[package]
name = "akkord"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = "0.7"
tower-http = { version = "0.5", features = ["fs"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
itertools = "0.13.0"
askama = "0.12.1"

[dev-dependencies]
reqwest = { version = "0.11", features = ["json"] }
httpc-test = "0.1.1"
anyhow = "1"